# ECS-Engine

./: .gitignore  CMakeLists.txt
include/: Application.h  Camera.h  Component.h  ComponentIDManager.h  ComponentManager.h  Config.h  Container.h  DefaultComponents.h  Defines.h  Engine.h  Entity.h  EntityManager.h  Input.h  Log.h  Manager.h  MeshRenderer.h  OpenGLAPI.h  RendererAPI.h  System.h  SystemManager.h
include/Main/: Application.h  Camera.h  Config.h  DefaultComponents.h  Defines.h  Input.h  Manager.h
include/OpenGL/: OpenGLAPI.h
include/Rendering/: BufferManager.h  MeshRenderer.h  Renderer2D.h  RendererAPI.h  VertexBuffer.h
shaders/: light.frag  light.vert  shader.frag
src/: Application.cpp  Camera.cpp  Component.cpp  ComponentIDManager.cpp  ComponentManager.cpp  Config.cpp  DefaultComponents.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  Input.cpp  Log.cpp  Manager.cpp  MeshRenderer.cpp  OpenGLAPI.cpp  Renderer2D.cpp  RendererAPI.cpp  System.cpp  SystemManager.cpp  main.cpp
src/Main/: Application.cpp  Camera.cpp  Config.cpp  DefaultComponents.cpp  Input.cpp  Log.cpp
src/OpenGL/: OpenGLAPI.cpp
src/Rendering/: BufferManager.cpp  MeshRenderer.cpp  Renderer2D.cpp  RendererAPI.cpp  VertexBuffer.cpp
temp/: camera.h  glad.c  main.cpp  shader.h
temp/glad/: glad.h
